# ProjektarbeitNew

./: .gitattributes  CMakeLists.txt  README.md  main.cpp
include/: CameraController.h  ImageProcessor.h
sdks/MVS/Development/Documentations/: Machine Vision Camera SDK Developer Guide Windows (.NET) V4.5.0.chw
sdks/MVS/Development/Includes/: MvObsoleteInterfaces.h
src/: CameraController.cpp  ImageProcessor.cpp
